--- a/app/src/main/res/layout/activity_new_trip.xml
+++ b/app/src/main/res/layout/activity_new_trip.xml
@@ -9,12 +9,28 @@
     tools:context=".NewTripActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/my_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/_16sdp"
-        android:id="@+id/my_layout"
+        android:background="#FBFAFB"
         android:focusable="true"
-        android:focusableInTouchMode="true" >
+        android:focusableInTouchMode="true"
+        android:paddingBottom="@dimen/_16sdp">
+
+        <TextView
+            android:id="@+id/tvTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="@string/new_trip"
+            android:textColor="#FD5488"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="MissingPrefix" />
 
 
         <EditText
@@ -22,18 +38,20 @@
             android:layout_width="0dp"
             android:layout_height="@dimen/_35sdp"
             android:layout_marginStart="@dimen/_16sdp"
+            android:layout_marginTop="@dimen/_16sdp"
             android:layout_marginEnd="@dimen/_16sdp"
             android:autofillHints=""
-            android:background="@drawable/bg_edit_field"
+            android:background="@drawable/bg_top_shap_10"
             android:ems="10"
             android:hint="@string/trip_name"
             android:inputType="textPersonName"
             android:paddingStart="@dimen/_8sdp"
+            android:textColor="#0E0E0E"
             android:textSize="@dimen/_13ssp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="63dp"
+            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
             tools:targetApi="o" />
 
         <TextView
@@ -42,6 +60,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_16sdp"
             android:text="@string/start_point"
+            android:textColor="#3B5998"
             android:textSize="@dimen/_14sdp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@+id/tripNameInput"
@@ -53,9 +72,10 @@
             android:layout_width="0dp"
             android:layout_height="@dimen/_35sdp"
             android:layout_marginTop="@dimen/_4sdp"
-            android:background="@drawable/bg_edit_field"
-            android:drawableStart="@drawable/baseline_location_on_black_18"
+            android:background="@drawable/bg_top_shap_10"
+            android:drawableStart="@drawable/ic_baseline_add_location_alt_24"
             android:paddingStart="@dimen/_5sdp"
+            android:textColor="#0B0A0A"
             android:textSize="@dimen/_13ssp"
             app:layout_constraintEnd_toEndOf="@+id/tripNameInput"
             app:layout_constraintStart_toStartOf="@+id/textView2"
@@ -67,6 +87,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_16sdp"
             android:text="@string/end_point"
+            android:textColor="#3B5998"
             android:textSize="@dimen/_14sdp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@+id/startPointSearchView"
@@ -77,9 +98,10 @@
             android:layout_width="0dp"
             android:layout_height="@dimen/_35sdp"
             android:layout_marginTop="@dimen/_4sdp"
-            android:background="@drawable/bg_edit_field"
-            android:drawableStart="@drawable/baseline_location_on_black_18"
+            android:background="@drawable/bg_top_shap_10"
+            android:drawableStart="@drawable/ic_baseline_add_location_alt_24"
             android:paddingStart="@dimen/_5sdp"
+            android:textColor="#121212"
             android:textSize="@dimen/_13ssp"
             app:layout_constraintEnd_toEndOf="@+id/startPointSearchView"
             app:layout_constraintStart_toStartOf="@+id/textView4"
@@ -91,6 +113,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_16sdp"
             android:text="@string/start_details"
+            android:textColor="#3B5998"
             android:textSize="@dimen/_14sdp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@+id/endPointSearchView"
@@ -103,7 +126,7 @@
             android:layout_marginTop="@dimen/_4sdp"
             android:background="@color/white"
             android:contentDescription="@string/calender_image"
-            android:src="@drawable/twotone_calendar_today_black_24"
+            android:src="@drawable/ic_baseline_calendar_today_24"
             app:layout_constraintStart_toStartOf="@+id/textView5"
             app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
@@ -111,8 +134,8 @@
             android:id="@+id/dateTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/_12ssp"
             android:layout_marginStart="@dimen/_4sdp"
+            android:textSize="@dimen/_12ssp"
             app:layout_constraintBottom_toBottomOf="@+id/calender_btn"
             app:layout_constraintStart_toEndOf="@+id/calender_btn"
             app:layout_constraintTop_toTopOf="@+id/calender_btn" />
@@ -123,7 +146,7 @@
             android:layout_height="wrap_content"
             android:background="@color/white"
             android:contentDescription="@string/time_image"
-            android:src="@drawable/twotone_more_time_black_24"
+            android:src="@drawable/ic_baseline_more_time_24"
             app:layout_constraintStart_toStartOf="@+id/textView6"
             app:layout_constraintTop_toTopOf="@+id/calender_btn" />
 
@@ -133,6 +156,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_16sdp"
             android:text="@string/repeating"
+            android:textColor="#3B5998"
             android:textSize="@dimen/_14ssp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@+id/endPointSearchView"
@@ -154,10 +178,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/trip_type"
+            android:textColor="#3B5998"
             android:textSize="@dimen/_14ssp"
             android:textStyle="bold"
-            app:layout_constraintTop_toTopOf="@+id/textView5"
-            tools:layout_editor_absoluteX="243dp" />
+            app:layout_constraintStart_toEndOf="@+id/tvTitle"
+            app:layout_constraintTop_toTopOf="@+id/textView5" />
 
         <Spinner
             android:id="@+id/trip_type"
@@ -172,8 +197,8 @@
 
         <Button
             android:id="@+id/btnAddNote"
-            android:layout_width="65dp"
-            android:layout_height="51dp"
+            android:layout_width="45dp"
+            android:layout_height="31dp"
             android:layout_marginTop="@dimen/_4sdp"
             android:background="@drawable/ic_baseline_note_add_24"
             app:layout_constraintStart_toStartOf="@+id/textView"
@@ -199,6 +224,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_16sdp"
             android:text="@string/Add_Note"
+            android:textColor="#3B5998"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@+id/repeating_spinner"
@@ -208,8 +234,8 @@
             android:id="@+id/timeTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/_12ssp"
             android:layout_marginStart="@dimen/_4sdp"
+            android:textSize="@dimen/_12ssp"
             app:layout_constraintBottom_toBottomOf="@+id/timeBtn"
             app:layout_constraintStart_toEndOf="@+id/timeBtn"
             app:layout_constraintTop_toTopOf="@+id/timeBtn" />
