--- a/app/src/main/res/layout/trip_item_view.xml
+++ b/app/src/main/res/layout/trip_item_view.xml
@@ -5,10 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="@dimen/_10sdp"
-    android:layout_marginTop="@dimen/_2sdp"
-    android:layout_marginRight="@dimen/_10sdp"
-    android:layout_marginBottom="10dp"
+    android:layout_marginHorizontal="@dimen/_10sdp"
+    android:layout_marginTop="@dimen/_4sdp"
     android:background="@color/gray_orange"
     card_view:cardCornerRadius="@dimen/_8sdp">
 
@@ -16,8 +14,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/images"
-        android:weightSum="6">
+        android:background="@drawable/images">
 
 
         <Button
@@ -120,22 +117,6 @@
             card_view:layout_constraintBottom_toTopOf="@+id/btnStart"
             card_view:layout_constraintEnd_toEndOf="parent" />
 
-        <Button
-            android:id="@+id/btnStart"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_8sdp"
-            android:layout_marginTop="@dimen/_12sdp"
-            android:layout_marginEnd="@dimen/_8sdp"
-            android:layout_marginBottom="@dimen/_8sdp"
-            android:backgroundTint="#F9690E"
-            android:text="@string/btn_Start"
-            android:textColor="#F6F4FA"
-            card_view:layout_constraintBottom_toBottomOf="parent"
-            card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toBottomOf="@+id/imageView4" />
-
         <TextView
             android:id="@+id/statusView"
             android:layout_width="wrap_content"
@@ -144,6 +125,20 @@
             card_view:layout_constraintStart_toStartOf="@+id/dateTextView"
             card_view:layout_constraintTop_toTopOf="@+id/imageView4"
             tools:text="upcoming or forgotten" />
+
+        <Button
+            android:id="@+id/btnStart"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/_8sdp"
+            android:layout_marginTop="@dimen/_12sdp"
+            android:backgroundTint="#F9690E"
+            android:text="@string/btn_Start"
+            android:textColor="#F6F4FA"
+            card_view:layout_constraintBottom_toBottomOf="parent"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
