--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,10 +29,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginBottom="@dimen/_10sdp"
+                android:layout_marginBottom="@dimen/_4sdp"
                 android:fontFamily="@font/candal"
                 android:paddingTop="20dp"
-                android:paddingBottom="130dp"
+                android:paddingBottom="90dp"
                 android:text="Login Form"
                 android:textColor="#FB4C40"
                 android:textSize="36sp"
@@ -84,13 +84,13 @@
 
             <com.spark.submitbutton.SubmitButton
                 android:id="@+id/logLoginBtn"
-                android:layout_width="@dimen/_147sdp"
-                android:layout_height="@dimen/_64sdp"
+                android:layout_width="218dp"
+                android:layout_height="96dp"
 
                 android:gravity="center"
                 android:text="Login"
                 android:textColor="@color/white"
-                android:textSize="16sp"
+                android:textSize="13sp"
                 android:textStyle="bold"
                 app:sub_btn_background="@color/colorPrimary"
                 app:sub_btn_duration="3000"
