--- a/app/src/main/res/layout/activity_new_trip.xml
+++ b/app/src/main/res/layout/activity_new_trip.xml
@@ -109,7 +109,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_4sdp"
-            android:background="@color/white"
+            android:background="#FBFAFB"
             android:contentDescription="@string/calender_image"
             android:src="@drawable/ic_baseline_calendar_today_24"
             app:layout_constraintStart_toStartOf="@+id/textView5"
@@ -129,7 +129,7 @@
             android:id="@+id/timeBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/white"
+            android:background="#FBFAFB"
             android:contentDescription="@string/time_image"
             android:src="@drawable/ic_baseline_more_time_24"
             app:layout_constraintStart_toStartOf="@+id/textView6"
