--- a/app/src/main/res/layout/trip_item_view.xml
+++ b/app/src/main/res/layout/trip_item_view.xml
@@ -130,12 +130,12 @@
 
         <Button
             android:id="@+id/btnStart"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="369dp"
+            android:layout_height="35dp"
             android:layout_margin="@dimen/_8sdp"
             android:layout_marginTop="@dimen/_12sdp"
-            android:background="@drawable/btnframe"
-            android:backgroundTint="#00BCD4"
+            android:background="#FBFAFB"
+            android:backgroundTint="#FBFAFB"
             android:text="@string/btn_Start"
             android:textColor="#F6F4FA"
             card_view:layout_constraintBottom_toBottomOf="parent"
