--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,15 +1,9 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="Theme.EasyTripPlanner" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.EasyTripPlanner" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-    </style>
-
-    <!--TabLayout Styles -->
-    <style name="Theme.EasyTripPlanner.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
     </style>
 
     <style name="Theme.TabActivityReview.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
