--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FBFAFB"
-    tools:context=".activities.LoginActivity">
+    tools:context=".Fragments.LoginFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -31,8 +31,8 @@
                 android:layout_marginTop="@dimen/_10sdp"
                 android:layout_marginBottom="@dimen/_10sdp"
                 android:fontFamily="@font/candal"
-                android:paddingTop="20dp"
                 android:paddingVertical="@dimen/_42sdp"
+                android:paddingTop="20dp"
                 android:text="Login Form"
                 android:textColor="#FB4C40"
                 android:textSize="36sp"
