--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FBFAFB"
-    tools:context=".activities.RegistrationActivity">
+    tools:context=".Fragments.RegisterFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -32,7 +32,7 @@
                 android:fontFamily="@font/candal"
                 android:paddingTop="20dp"
                 android:paddingBottom="100dp"
-                android:text="Registration "
+                android:text="@string/registration"
                 android:textColor="#FB4C40"
                 android:textSize="30sp"
                 android:textStyle="bold"
