--- a/app/src/main/res/layout/fragment_upcoming.xml
+++ b/app/src/main/res/layout/fragment_upcoming.xml
@@ -7,7 +7,7 @@
     tools:context=".Fragments.UpcomingFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/tripList"
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layoutManager="LinearLayoutManager" />
