--- a/app/src/main/res/layout/trip_item_view.xml
+++ b/app/src/main/res/layout/trip_item_view.xml
@@ -13,7 +13,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/images">
+        android:background="@drawable/images"
+        android:paddingBottom="@dimen/_4sdp">
 
 
         <Button
@@ -44,7 +45,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_20sdp"
-            card_view:layout_constraintStart_toStartOf="@+id/btnStart"
+            card_view:layout_constraintStart_toStartOf="@+id/imageView3"
             card_view:layout_constraintTop_toBottomOf="@+id/tripName"
             card_view:srcCompat="@drawable/ic_baseline_location_on_24" />
 
@@ -80,7 +81,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_12sdp"
-            card_view:layout_constraintStart_toStartOf="@+id/btnStart"
+            card_view:layout_constraintStart_toStartOf="@+id/imageView4"
             card_view:layout_constraintTop_toBottomOf="@+id/endPoint"
             card_view:srcCompat="@drawable/ic_baseline_alarm_24" />
 
@@ -89,8 +90,9 @@
             android:id="@+id/imageView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_8sdp"
             android:layout_marginTop="@dimen/_12sdp"
-            card_view:layout_constraintStart_toStartOf="@+id/btnStart"
+            card_view:layout_constraintStart_toStartOf="parent"
             card_view:layout_constraintTop_toBottomOf="@+id/imageView3"
             card_view:srcCompat="@drawable/baseline_pending_actions_24" />
 
@@ -109,11 +111,10 @@
             android:id="@+id/btn_Note"
             android:layout_width="@dimen/_25sdp"
             android:layout_height="@dimen/_25sdp"
-            android:layout_marginBottom="@dimen/_8sdp"
+            android:layout_marginEnd="@dimen/_8sdp"
             android:background="@drawable/ic_baseline_sticky_note_2_24"
-            android:backgroundTint="@color/gray_orange"
-            card_view:layout_constraintBottom_toTopOf="@+id/btnStart"
-            card_view:layout_constraintEnd_toEndOf="@+id/btnStart" />
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintTop_toTopOf="@+id/statusView" />
 
         <TextView
             android:id="@+id/statusView"
@@ -130,8 +131,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/_8sdp"
-            android:layout_marginVertical="@dimen/_12sdp"
             android:layout_marginTop="@dimen/_12sdp"
+            android:layout_marginBottom="@dimen/_8sdp"
             android:background="@drawable/bg_edit_field"
             android:backgroundTint="#FBFAFB"
             android:text="@string/btn_Start"
