--- a/app/src/main/res/menu/menu_bottom_nav.xml
+++ b/app/src/main/res/menu/menu_bottom_nav.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/upcoming_fragment"
+        android:id="@+id/upcomingFragment"
         android:icon="@drawable/baseline_event_note_24"
         android:title="@string/upcoming_trips" />
 
     <item
-        android:id="@+id/history_fragment"
+        android:id="@+id/historyFragment"
         android:icon="@drawable/baseline_event_available_24"
         android:title="@string/history" />
 
     <item
-        android:id="@+id/mapped_fragment"
+        android:id="@+id/mappedFragment"
         android:icon="@drawable/baseline_map_24"
         android:title="@string/mapped_trips" />
 
