remove any deprecated in code

--- a/app/src/main/res/menu/trip_menu.xml
+++ b/app/src/main/res/menu/trip_menu.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/editTrip"
         android:icon="@drawable/ic_baseline_edit_road_18"
@@ -9,4 +8,9 @@
         android:id="@+id/deleteTrip"
         android:icon="@drawable/ic_baseline_delete_18"
         android:title="@string/delete" />
+
+    <item
+        android:id="@+id/cancelTrip"
+        android:icon="@drawable/ic_baseline_cancel_presentation_18"
+        android:title="@string/cancel" />
 </menu>
