--- a/app/src/main/res/layout/fragment_add_trip.xml
+++ b/app/src/main/res/layout/fragment_add_trip.xml
@@ -198,7 +198,7 @@
             android:layout_marginTop="@dimen/_16sdp"
             android:layout_marginBottom="21dp"
             android:background="@drawable/btnframe"
-            android:text="@string/add_new_trip_button"
+            android:text="@string/save_add_btn"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.452"
