--- a/app/src/main/res/menu/logout_menu.xml
+++ b/app/src/main/res/menu/logout_menu.xml
@@ -2,8 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/logout"
-        app:showAsAction="never"
+        android:id="@+id/logout_menu_item"
         android:actionLayout="@layout/activity_main"
-        android:title="Logout"/>
+        android:icon="@drawable/ic_baseline_login_18"
+        android:title="@string/logout"
+        app:showAsAction="collapseActionView|ifRoom|withText" />
 </menu>
